# load-balance

./: .gitignore  Cargo.toml  build.rs  otel-config.yaml
proto/echo/: echo.proto
src/: SecondServer.rs  client.rs  lib.rs  server.rs
