[package]
name = "load-balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "load-balance-client"
path = "src/client.rs"

[[bin]]
name = "load-balance-middleserver"
path = "src/server.rs"

[[bin]]
name = "load-balance-headserver"
path = "src/SecondServer.rs"

[dependencies]
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.11"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tokio-stream = { version = "0.1", features = ["net"] }

tower = { version = "0.4" }

tonic = "0.8"
# Reflection example
listenfd = "0.3"
tonic-reflection = { version = "0.5.0" }
# grpc-web example
bytes = "1"
tonic-web = { version = "0.4.0" }

# Tracing
tracing = "0.1.16"
tracing-attributes = "0.1.22"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "json", "time", "tracing-log"] }
tracing-opentelemetry = "0.17.4"

tokio-rustls = "*"
hyper-rustls = { version = "0.23", features = ["http2"] }
rustls-pemfile = "*"
tower-http = { version = "0.3", features = ["add-extension", "util"] }

opentelemetry = { version = "0.17.0", features = ["rt-tokio", "rt-async-std", "trace"]}
opentelemetry-otlp = { version = "0.10.0", features = ["grpc-sys"] }

h2 = "0.3"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }